--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "@react-icons/all-files": "^4.1.0",
     "bootstrap": "^4.6.0",
     "gatsby": "^3.2.1",
+    "gatsby-plugin-image": "^1.3.0",
     "gatsby-plugin-sass": "^4.3.0",
+    "gatsby-plugin-sharp": "^3.3.0",
+    "gatsby-source-filesystem": "^3.3.0",
+    "gatsby-transformer-sharp": "^3.3.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
