--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^4.6.0",
     "gatsby": "^3.2.1",
     "gatsby-plugin-image": "^1.3.0",
+    "gatsby-plugin-manifest": "^3.4.0",
     "gatsby-plugin-sass": "^4.3.0",
     "gatsby-plugin-sharp": "^3.3.0",
     "gatsby-remark-responsive-iframe": "^4.0.0",
