--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
-    "sass": "^1.32.8"
+    "sass": "^1.32.8",
+    "smooth-scroll": "^16.1.3"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
