--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-plugin-manifest": "^3.4.0",
     "gatsby-plugin-sass": "^4.3.0",
     "gatsby-plugin-sharp": "^3.3.0",
+    "gatsby-plugin-smoothscroll": "^1.2.0",
     "gatsby-remark-responsive-iframe": "^4.0.0",
     "gatsby-source-contentful": "^5.3.0",
     "gatsby-source-filesystem": "^3.3.0",
@@ -30,8 +31,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
-    "sass": "^1.32.8",
-    "smooth-scroll": "^16.1.3"
+    "sass": "^1.32.8"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
