--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@ccalamos/gatsby-source-googlemaps-static": "^3.0.1",
+    "@contentful/rich-text-react-renderer": "^14.1.3",
     "@react-icons/all-files": "^4.1.0",
     "bootstrap": "^4.6.0",
     "gatsby": "^3.2.1",
