--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@contentful/rich-text-react-renderer": "^14.1.3",
     "@react-icons/all-files": "^4.1.0",
     "bootstrap": "^4.6.0",
+    "formik": "^2.2.6",
     "gatsby": "^3.2.1",
     "gatsby-plugin-image": "^1.3.0",
     "gatsby-plugin-manifest": "^3.4.0",
