--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-image": "^1.3.0",
     "gatsby-plugin-manifest": "^3.4.0",
     "gatsby-plugin-sass": "^4.3.0",
+    "gatsby-plugin-scroll-reveal": "^0.0.7",
     "gatsby-plugin-sharp": "^3.3.0",
     "gatsby-plugin-smoothscroll": "^1.2.0",
     "gatsby-remark-responsive-iframe": "^4.0.0",
