--- a/package.json
+++ b/package.json
@@ -14,25 +14,26 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "@ccalamos/gatsby-source-googlemaps-static": "^3.0.1",
+    "@ccalamos/gatsby-source-googlemaps-static": "^1.4.2",
     "@contentful/rich-text-react-renderer": "^14.1.3",
     "@react-icons/all-files": "^4.1.0",
     "bootstrap": "^4.6.0",
     "formik": "^2.2.6",
-    "gatsby": "^3.2.1",
-    "gatsby-plugin-image": "^1.3.0",
-    "gatsby-plugin-manifest": "^3.4.0",
-    "gatsby-plugin-sass": "^4.3.0",
+    "gatsby": "^2.22.10",
+    "gatsby-plugin-image": "^0.7.2",
+    "gatsby-plugin-manifest": "^2.6.1",
+    "gatsby-plugin-sass": "^3.2.0",
     "gatsby-plugin-scroll-reveal": "^0.0.7",
-    "gatsby-plugin-sharp": "^3.3.0",
+    "gatsby-plugin-sharp": "^2.14.4",
     "gatsby-plugin-smoothscroll": "^1.2.0",
-    "gatsby-remark-responsive-iframe": "^4.0.0",
-    "gatsby-source-contentful": "^5.3.0",
-    "gatsby-source-filesystem": "^3.4.0",
-    "gatsby-transformer-remark": "^4.0.0",
-    "gatsby-transformer-sharp": "^3.3.0",
+    "gatsby-remark-responsive-iframe": "^2.11.0",
+    "gatsby-source-contentful": "^4.6.4",
+    "gatsby-source-filesystem": "^2.11.1",
+    "gatsby-transformer-remark": "^2.16.1",
+    "gatsby-transformer-sharp": "^2.12.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
+    "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.1",
     "sass": "^1.32.8"
   },
