--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@contentful/rich-text-react-renderer": "^14.1.3",
     "@react-icons/all-files": "^4.1.0",
     "bootstrap": "^4.6.0",
+    "detect-browser": "^5.2.0",
     "formik": "^2.2.6",
     "gatsby": "^2.22.10",
     "gatsby-plugin-image": "^0.7.2",
