--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-bootstrap": "^1.5.2",
     "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "sass": "^1.32.8"
   },
   "devDependencies": {
